# backend

./: Cargo.toml  Dockerfile  sqlx-data.json
migrations/: 20230721215702_initial.sql
src/: config.rs  main.rs
src/auth/: admin_jwt.rs  admin_login.rs  conf_guard.rs  mod.rs  pwd.rs
src/database/: client.rs  mod.rs
src/database/models/: admin.rs  announcement.rs  category.rs  conference.rs  event.rs  location.rs  mod.rs
src/routes/: admin.rs  announcements.rs  conferences.rs  events.rs  mod.rs
