[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6.3", features = ["macros", "postgres", "offline", "runtime-tokio-rustls", "chrono", "json"]}
chrono = { version = "0.4.26", features = ["serde"] }
anyhow = "1.0.72"
rocket = { version = "0.5.0-rc", features = ["json"] }
argon2 = "0.5.1"
jsonwebtoken = "8.3.0"
dotenv = "0.15.0"
